syntax = "proto3";
enum UserObservable {
    Unknown = 0;
    UserAuthChanged = 1;
    UserProfileUpdated = 2;
}
